# watercooler-manager

./: ARCH_INSTALL.md  DAEMON_UI_ARCHITECTURE.md  LIVE_TEST_RESULTS.md  PACKAGE_INSTALLATION_GUIDE.md  PKGBUILD  README.md  RESEARCH_UPDATES.md  TEST_RESULTS.md  pyproject.toml  quick-test.sh  requirements-linux.txt  requirements-windows.txt  requirements.txt  setup.py  test-arch-package.sh  test-build-local.sh
.github/workflows/: build-linux.yml  build-release.yml
arch/: 99-watercooler-manager.rules  config.json  org.watercooler.manager.policy  watercooler-manager-daemon  watercooler-manager-user.service  watercooler-manager.desktop  watercooler-manager.service
src/: main.py
src/watercooler_manager/: __init__.py  app.py  daemon_client.py  daemon_service.py  gui_client.py  settings.py  tray.py
