[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "watercooler-manager"
version = "1.2.0"
description = "System tray application for managing LCT water coolers"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Allan Ditzel", email = "allan@allanditzel.com"},
]
maintainers = [
    {name = "Allan Ditzel", email = "allan@allanditzel.com"},
]
keywords = ["watercooler", "bluetooth", "system-tray", "hardware", "cooling"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: X11 Applications :: GTK",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: System :: Hardware",
    "Topic :: System :: Monitoring",
    "Topic :: Utilities",
]
requires-python = ">=3.9"
dependencies = [
    "bleak>=0.22.0",
    "pillow>=11.0.0",
    "pystray>=0.19.0",
    "six>=1.17.0",
    "typing_extensions>=4.12.0",
]

[project.optional-dependencies]
linux = [
    "PyGObject>=3.42.0",
    "pycairo>=1.20.0",
    # Note: python-dbus is a system package, install via:
    # Arch: sudo pacman -S python-dbus
    # Ubuntu: sudo apt install python3-dbus
    # Fedora: sudo dnf install python3-dbus
]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0",
    "flake8>=6.0",
    "mypy>=1.0",
]

[project.urls]
Homepage = "https://github.com/tomups/watercooler-manager"
Repository = "https://github.com/tomups/watercooler-manager"
"Bug Reports" = "https://github.com/tomups/watercooler-manager/issues"
Documentation = "https://github.com/tomups/watercooler-manager/blob/main/README.md"

[project.scripts]
watercooler-manager = "watercooler_manager:main"
watercooler-manager-gui = "watercooler_manager.gui_client:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
watercooler_manager = ["../icons/*.png"]

[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers"
testpaths = [
    "tests",
]
asyncio_mode = "auto"
